--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 
       <nav class="slide">
         <a href="#">Home</a>
-        <a href="#project">Carousel</a>
+        <a href="#bentotext">Carousel</a>
         <a href="#team">Team</a>
         <a href="#contact">Contact</a>
-        <audio controls autoplay loop class="aud">
+        <!-- <audio controls autoplay loop class="aud">
           <source src="Naruto- Despair.mp3" type="audio/mpeg">
-        </audio>
+        </audio> -->
       </nav>
 
       <div class="action">
@@ -42,101 +42,88 @@
   <section class="hero">
     <div class="container">
       <div class="mid">
-        <h2>NAR<br>UTO</h2>
-        <img style="width: 400px;" class="naruto" src="img/naruto.png">
+        <h2 style="display: none;" class="heroactive" id="naruto">NAR<br>UTO</h2>
+        <h2 style="display: none;" id="sasuke">SAS<br>UKE</h2>
+        <h2 style="display: none;" id="sakura">SAK<br>URA</h2>
+        <img id="img_naruto" style="width: 400px; display: none;" class="naruto heroactive" src="img/naruto.png">
+        <img id="img_sasuke" style="width: 400px; display: none;" class="naruto" src="img/sasuke.jpeg">
+        <img id="img_sakura" style="width: 400px; display: none;" class="naruto" src="img/nar2.jpg">
       </div>
 
     </div>
 
 
-    <section id="project">
-      <h1 style="color: rgba(217, 37, 37, 0.967); margin-bottom: 40px; font-size: 50px;">Carousel</h1>
-      <div class="container-pro">
-
-        <div class="card active" style="background-image: url('./img/car1.jpg')">
-          <h3>Naruto</h3>
-        </div>
-        <div class="card" style="background-image: url('./img/nar4.webp')">
-          <h3>Itachi</h3>
-        </div>
-        <div class="card" style="background-image: url('./img/nar4.jpg')">
-          <h3>Sasuke</h3>
-        </div>
-        <div class="card" style="background-image: url('./img/nar51.jpg')">
-          <h3>Kakashi</h3>
-        </div>
-        <div class="card" style="background-image: url('./img/nar6.jpg')">
-          <h3>Madara</h3>
-        </div>
-        <div class="card" style="background-image: url('./img/nar7.webp')">
-          <h3>Jiraya</h3>
-        </div>
-        <div class="card" style="background-image: url('./img/naruto.jpg">
-          <h3>Obito</h3>
-        </div>
-
-
+    <h1 style="text-align: center;" id="bentotext" class="textstyle">Gallery</h1>
+    <section id="bento">
+      <div class="bento-grid">
+        <div class="c bento-item bento-item-1"></div>
+        <div class="c bento-item bento-item-2"></div>
+        <div class="c bento-item bento-item-3"></div>
+        <div class="c bento-item bento-item-4"></div>
+        <div class="c bento-item bento-item-5"></div>
+        <div class="c bento-item bento-item-6"></div>
+        <div class="c bento-item bento-item-7"></div>
+        <div class="c bento-item bento-item-8"></div>
       </div>
     </section>
 
-
-<section id="team">
-  <h1 style="color: red; font-size: 50px;">Our Team</h1>
-<div class="container" style="margin-top: -150px;">
-  <div class="team-member">
-    <div class="image-wrapper">
-      <img src="naruto.jpeg" alt="Person 1">
-      <div class="overlay">
-        <div class="overlay-content">
-          <h3>Abdul Muqsit</h3>
-          <p>2021BITE007</p>
+    <section id="team">
+      <h1 class="textstyle" style="margin-top: 50px;">OUR TEAM</h1>
+      <div class="container" style="margin-top: -225px;">
+        <div class="team-member">
+          <div class="image-wrapper">
+            <img src="naruto.jpeg" alt="Person 1">
+            <div class="overlay">
+              <div class="overlay-content">
+                <h3>Abdul Muqsit</h3>
+                <p>2021BITE007</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="team-member">
+          <div class="image-wrapper">
+            <img src="madara.jpg" alt="Person 2">
+            <div class="overlay">
+              <div class="overlay-content">
+                <h3>Muneeb Illahi</h3>
+                <p>2021BITE018</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="team-member">
+          <div class="image-wrapper">
+            <img src="kakashi.jpeg" alt="Person 3">
+            <div class="overlay">
+              <div class="overlay-content">
+                <h3>Inam-ul-Haq</h3>
+                <p>2021BITE015</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="team-member">
+          <div class="image-wrapper">
+            <img src="sasuke.png" alt="Person 4">
+            <div class="overlay">
+              <div class="overlay-content">
+                <h3>Saliq Nisar</h3>
+                <p>2021BITE008</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
-  <div class="team-member">
-    <div class="image-wrapper">
-      <img src="madara.jpg" alt="Person 2">
-      <div class="overlay">
-        <div class="overlay-content">
-          <h3>Muneeb Illahi</h3>
-          <p>2021BITE018</p>
-        </div>
+    </section>
+    <section id="contact">
+      <div class="contact-container">
+        <h1 class="textstyle" style="margin-bottom: 25px;">Contact Us</h1>
+        <p>Email: houseofkages@gmail.com</p>
+        <p>Phone: +96-123420</p>
+        <p>&copy; 2023 Web Development Project.</p>
       </div>
-    </div>
-  </div>
-  <div class="team-member">
-    <div class="image-wrapper">
-      <img src="kakashi.jpeg" alt="Person 3">
-      <div class="overlay">
-        <div class="overlay-content">
-          <h3>Inam-ul-Haq</h3>
-          <p>2021BITE015</p>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div class="team-member">
-    <div class="image-wrapper">
-      <img src="sasuke.png" alt="Person 4">
-      <div class="overlay">
-        <div class="overlay-content">
-          <h3>Saliq Nisar</h3>
-          <p>2021BITE008</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-</section>
- <section id="contact">
-    <div class="contact-container">
-      <h1 style="color: red; margin-bottom: 40px; font-size: 50px;">Contact Us</h1>
-      <p>Email: houseofkages@gmail.com</p>
-      <p>Phone: +96-123420</p>
-      <p>&copy; 2023 Web Development Project.</p>
-    </div>
-  </section>
+    </section>
 
     <div class="left-side">
       <a href="#" class="active">Chunin</a>
@@ -145,9 +132,9 @@
     </div>
 
     <div class="right-side">
-      <a href="#">01</a>
-      <a href="#" class="active">02</a>
-      <a href="#">03</a>
+      <a href="#" id="bgone"><button id="btnone">01</button></a>
+      <a href="#" id="bgtwo" class="active"><button id="btntwo">02</button></a>
+      <a href="#" id="bgthree"><button id="btnthree">03</button></a>
     </div>
   </section>
 
