--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header>
     <div class="container">
       <div class="logo">
-        <a href="#"><img src="img/narutologo.png"></a>
+        <a href="#"><img src="assets/narutologo.png"></a>
       </div>
 
       <nav class="slide">
@@ -45,9 +45,9 @@
         <h2 style="display: none;" class="heroactive" id="naruto">NAR<br>UTO</h2>
         <h2 style="display: none;" id="sasuke">SAS<br>UKE</h2>
         <h2 style="display: none;" id="sakura">SAK<br>URA</h2>
-        <img id="img_naruto" style="width: 400px; display: none;" class="naruto heroactive" src="img/naruto.png">
-        <img id="img_sasuke" style="width: 400px; display: none;" class="naruto" src="img/sasuke.jpeg">
-        <img id="img_sakura" style="width: 400px; display: none;" class="naruto" src="img/nar2.jpg">
+        <img id="img_naruto" style="width: 600px; display: none;" class="naruto heroactive" src="assets/naruto.png">
+        <img id="img_sasuke" style="width: 400px; display: none;" class="naruto" src="assets/sasuke.png">
+        <img id="img_sakura" style="width: 500px; display: none;" class="naruto" src="assets/sakura.png">
       </div>
 
     </div>
@@ -72,7 +72,7 @@
       <div class="container" style="margin-top: -225px;">
         <div class="team-member">
           <div class="image-wrapper">
-            <img src="naruto.jpeg" alt="Person 1">
+            <img src="./assets/team1.jpeg" alt="Person 1">
             <div class="overlay">
               <div class="overlay-content">
                 <h3>Abdul Muqsit</h3>
@@ -83,7 +83,7 @@
         </div>
         <div class="team-member">
           <div class="image-wrapper">
-            <img src="madara.jpg" alt="Person 2">
+            <img src="./assets/team2.jpg" alt="Person 2">
             <div class="overlay">
               <div class="overlay-content">
                 <h3>Muneeb Illahi</h3>
@@ -94,7 +94,7 @@
         </div>
         <div class="team-member">
           <div class="image-wrapper">
-            <img src="kakashi.jpeg" alt="Person 3">
+            <img src="./assets/team3.jpeg" alt="Person 3">
             <div class="overlay">
               <div class="overlay-content">
                 <h3>Inam-ul-Haq</h3>
@@ -105,7 +105,7 @@
         </div>
         <div class="team-member">
           <div class="image-wrapper">
-            <img src="sasuke.png" alt="Person 4">
+            <img src="./assets/team4.png" alt="Person 4">
             <div class="overlay">
               <div class="overlay-content">
                 <h3>Saliq Nisar</h3>
