Fix: Margin in gallery section

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <a href="#bentotext">Carousel</a>
         <a href="#team">Team</a>
         <a href="#contact">Contact</a>
-        <!-- <audio controls autoplay loop class="aud">
-          <source src="Naruto- Despair.mp3" type="audio/mpeg">
-        </audio> -->
+        <audio controls autoplay loop class="aud">
+          <source src="./assets/Naruto-despair.mp3" type="audio/mpeg">
+        </audio>
       </nav>
 
       <div class="action">
@@ -53,7 +53,7 @@
     </div>
 
 
-    <h1 style="text-align: center;" id="bentotext" class="textstyle">Gallery</h1>
+    <h1 style="text-align: center; margin-bottom: 50px;" id="bentotext" class="textstyle">Gallery</h1>
     <section id="bento">
       <div class="bento-grid">
         <div class="c bento-item bento-item-1"></div>
