--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
       <div class="mid">
         <h2 style="display: none;" class="heroactive" id="naruto">NAR<br>UTO</h2>
         <h2 style="display: none;" id="sasuke">SAS<br>UKE</h2>
-        <h2 style="display: none;" id="sakura">SAK<br>URA</h2>
+        <h2 style="display: none;" id="sakura">SAL<br>ICK</h2>
         <img id="img_naruto" style="width: 600px; display: none;" class="naruto heroactive" src="assets/naruto.png">
         <img id="img_sasuke" style="width: 400px; display: none;" class="naruto" src="assets/sasuke.png">
-        <img id="img_sakura" style="width: 500px; display: none;" class="naruto" src="assets/sakura.png">
+        <img id="img_sakura" style="width: 500px; display: none;" class="naruto" src="assets/saliqbhai.png">
       </div>
 
     </div>
