--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
     <h1 style="text-align: center; margin-bottom: 50px;" id="bentotext" class="textstyle">Gallery</h1>
     <section id="bento">
       <div class="bento-grid">
-        <div class="c bento-item bento-item-1"></div>
-        <div class="c bento-item bento-item-2"></div>
-        <div class="c bento-item bento-item-3"></div>
-        <div class="c bento-item bento-item-4"></div>
-        <div class="c bento-item bento-item-5"></div>
-        <div class="c bento-item bento-item-6"></div>
-        <div class="c bento-item bento-item-7"></div>
-        <div class="c bento-item bento-item-8"></div>
+        <div class="bento-item bento-item-1"></div>
+        <div class="bento-item bento-item-2"></div>
+        <div class="bento-item bento-item-3"></div>
+        <div class="bento-item bento-item-4"></div>
+        <div class="bento-item bento-item-5"></div>
+        <div class="bento-item bento-item-6"></div>
+        <div class="bento-item bento-item-7"></div>
+        <div class="bento-item bento-item-8"></div>
       </div>
     </section>
 
