Added music play button

--- a/index.html
+++ b/index.html
@@ -28,13 +28,15 @@
         <a href="#bentotext">Carousel</a>
         <a href="#team">Team</a>
         <a href="#contact">Contact</a>
-        <audio controls autoplay loop class="aud">
-          <source src="./assets/Naruto-despair.mp3" type="audio/mpeg">
-        </audio>
       </nav>
 
-      <div class="action">
-        <button class="search"><i class="fas fa-search"></i></button>
+      <div>
+        <button id="play-btn">
+          <i class="fas fa-play"></i>
+        </button>
+        <audio id="despair" loop>
+          <source src="./assets/Naruto-despair.mp3" type="audio/mpeg">
+        </audio>
       </div>
     </div>
   </header>
